--- a/styles.css
+++ b/styles.css
@@ -21,8 +21,6 @@
 
 body {
     background-color: rgb(253, 206, 120);
-
-    /* height: 100vh; */
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -32,11 +30,27 @@ body {
     font-family: "Tiempos Headline";
 }
 
+#night-mode-container {
+    position: fixed;
+    top: 20px;
+    right: 20px;
+    z-index: 5;
+    background-color: bisque;
+    border-radius: 15px;
+    padding: 10px;
+    cursor: pointer;
+    user-select: none;
+}
+
+#night-mode-button {
+    color: rgb(162, 105, 0);
+}
+
 #pfp {
     border-radius: 50%;
     width: 200px;
     transition: transform .1s ease-in-out;
-    /* padding-top: 20vh; */
+    margin-top: 20vh;
 }
 
 #pfp:hover {
@@ -44,34 +58,28 @@ body {
 
 }
 
-#front {
-    /* position: relative; */
-    /* position: inline; */
-    height: 100vh;
-    top: -15%;
-
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    white-space: nowrap;
-    /* padding: 0px; */
-}
-
-h1, h2, h3 {
+h1,
+h2,
+h3 {
     cursor: default;
 }
 
-h1 a, h1 {
-    /* font-family: 'Corben', cursive; */
+a {
+    color: inherit;
+    text-decoration: none;
+}
+
+/* h1 a, */
+h1 {
     font-size: 40pt;
     margin-bottom: 0px;
     transition: color, 0.3s;
     text-decoration: none;
-    color: black;
+    color: inherit;
 }
 
-h1:hover, h2:hover {
+h1:hover,
+h2:hover {
     color: rgb(54, 54, 54);
 }
 
@@ -79,17 +87,59 @@ h1:hover, h2:hover {
     font-family: "Tiempos Headline";
     font-size: 14pt;
     font-weight: 500;
-    color: rgb(74, 74, 74);
     padding: 10px;
     transition: color, 0.3s;
+    text-decoration: underline;
 }
 
 a:hover {
     color: rgb(143, 143, 143);
 }
 
-.content-container {
+/* #name-sticky {
+    position: sticky;
+    top: -20px;
+    width: 100%;
+    background-color: rgb(253, 206, 120);
+    display: inline;
+} */
+
+#name-box {
+    width: 100vw;
+    top: 0px;
+    position: sticky;
+    padding-top: 20px;
+    padding-bottom: 10px;
+    transition: background-color 0.15s;
+}
+
+#name {
+    font-weight: 800;
+    font-size: 3.5em;
+}
+
+.header-bg {
     background-color: rgb(255, 191, 72);
+    /* font-size: 2em; */
+}
+
+.header-bg-night {
+    background-color: rgb(162, 105, 0);
+}
+
+#frontpage-spacer {
+    margin-bottom: 30vh;
+}
+
+.night-mode {
+    background-color: rgb(114, 74, 0);
+    color: rgb(255, 191, 72) !important;
+}
+
+
+
+
+.content-container {
     padding: 30px;
     margin: 20px;
     border-radius: 7%;
@@ -99,21 +149,15 @@ a:hover {
     max-width: 550px;
     margin: auto;
     font-weight: 500;
-
     font-family: 'Montserrat', sans-serif;
 }
 
-#name-sticky {
-    position: sticky;
-    top: -20px;
-    width: 100%;
-    background-color: rgb(253, 206, 120);
-    display: inline;
-}
+
+
+
 
 @media screen and (max-width: 600px) {
     h1 {
-      font-size: 25pt;
+        font-size: 25pt;
     }
-  }
-
+}
