--- a/styles.css
+++ b/styles.css
@@ -20,7 +20,13 @@
 }
 
 body {
-    background-color: rgb(253, 206, 120);
+    /* background-color: rgb(253, 206, 120); */
+    background-color: #fccd76;
+    background-image: url("./topography.svg");
+    /* fill-opacity: 40%; */
+    /* fill: #fbecd0; */
+    /* opacity: 0.5; */
+    /* background-color: rgb(240, 235, 210); */
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -30,6 +36,7 @@ body {
     font-family: "Tiempos Headline";
 
     transition: all 0.15s;
+    /* color: rgb(229, 158, 109); */
 }
 
 #night-mode-container {
@@ -62,7 +69,7 @@ body {
     border-radius: 50%;
     width: 200px;
     transition: transform .1s ease-in-out;
-    /* margin-top: 20vh; */
+    margin-bottom: 20px;
 }
 
 #pfp:hover {
@@ -79,20 +86,17 @@ h3 {
 a {
     color: inherit;
     text-decoration: none;
+    transition: text-decoration 0.1s;
+    cursor: pointer;
 }
 
-/* h1 a, */
 h1 {
     font-size: 40pt;
-    margin-bottom: 0px;
+    margin-top: 10px;
+    margin-bottom: 10px;
     transition: color, 0.3s;
     text-decoration: none;
     color: inherit;
-}
-
-h1:hover,
-h2:hover {
-    color: rgb(54, 54, 54);
 }
 
 #picker a {
@@ -105,23 +109,12 @@ h2:hover {
 }
 
 a:hover {
-    color: rgb(143, 143, 143);
+    text-decoration: underline;
 }
 
-/* #name-sticky {
-    position: sticky;
-    top: -20px;
-    width: 100%;
-    background-color: rgb(253, 206, 120);
-    display: inline;
-} */
-
 #name-box {
-    width: 100vw;
     top: 0px;
     position: sticky;
-    padding-top: 20px;
-    padding-bottom: 10px;
     transition: background-color 0.15s;
 }
 
@@ -146,6 +139,8 @@ a:hover {
 .night-mode {
     background-color: rgb(114, 74, 0);
     color: rgb(255, 191, 72) !important;
+    background-color: #7b5000;
+    /* background-image: url("./topography.svg"); */
 }
 
 
@@ -178,5 +173,13 @@ a:hover {
 @media screen and (max-width: 600px) {
     h1 {
         font-size: 25pt;
+    }
+
+    h2 {
+        font-size: 15pt;
+    }
+
+    img {
+        transform: scale(0.7);
     }
 }
