--- a/styles.css
+++ b/styles.css
@@ -33,7 +33,7 @@ body {
     display: flex;
     flex-direction: column;
     align-items: center;
-    text-align: center;
+    /* text-align: center; */
     justify-content: center;
 
     font-family: "Tiempos Headline";
@@ -42,9 +42,20 @@ body {
     /* color: rgb(229, 158, 109); */
 }
 
+#greyscreen {
+    background-color: black;
+    display: none;
+    position: fixed;
+    top: 0px;
+    height: 100vh;
+    width: 100vw;
+    opacity: 0.5;
+    z-index: 10;
+}
+
 #night-mode-container {
-    position: absolute;
-    top: 20px;
+    position: fixed;
+    bottom: 20px;
     right: 20px;
     z-index: 5;
     background-color: bisque;
@@ -127,6 +138,7 @@ a:hover {
     top: 0px;
     position: sticky;
     transition: background-color 0.15s;
+    text-align: center;
 }
 
 #name {
@@ -159,15 +171,7 @@ a:hover {
 
 .content-container {
     padding: 30px;
-    margin: 20px;
-    border-radius: 7%;
-}
-
-.content {
-    max-width: 550px;
-    margin: auto;
-    font-weight: 500;
-    font-family: 'Montserrat', sans-serif;
+    max-width: 70vw;
 }
 
 .fixed {
@@ -175,6 +179,47 @@ a:hover {
     top: 0;
     left: 0;
     right: 0;
+}
+
+.project {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    /* position: relative; */
+}
+
+.project-picture {
+    width: 30vw;
+    object-fit: contain;
+    border-radius: 10px;
+    cursor: pointer;
+    z-index: 15;
+    flex-shrink: 0;
+    transition: all 0.25s;
+}
+
+.project-picture:hover {
+    /* border-color: azure;
+    border-style: inset;
+    border-radius: 5px; */
+    /* transform: scale(1.025); */
+}
+
+.project-picture-zoomed {
+    /* display: block; */
+    width: 60vw;
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
+
+
+.project-description {
+    margin-left: 30px;
+    font-weight: 500;
+    font-family: 'Montserrat', sans-serif;
 }
 
 
