--- a/styles.css
+++ b/styles.css
@@ -20,26 +20,14 @@
 }
 
 body {
-    /* background-color: rgb(253, 206, 120); */
     background-color: #fccd76;
     background-image: url("./topography.svg");
-    /* background-image: url(./a.jpg); */
-    /* background-image: url(./VHS\ Thumbnail.jpg); */
-    /* background-size: contain; */
-    /* fill-opacity: 40%; */
-    /* fill: #fbecd0; */
-    /* opacity: 0.5; */
-    /* background-color: rgb(240, 235, 210); */
     display: flex;
     flex-direction: column;
     align-items: center;
-    /* text-align: center; */
     justify-content: center;
-
     font-family: "Tiempos Headline";
-
     transition: all 0.15s;
-    /* color: rgb(229, 158, 109); */
 }
 
 #greyscreen {
@@ -76,43 +64,69 @@ body {
 }
 
 #landing {
-    /* position: absolute; */
     height: 100vh;
+    width: 100vw;
     overflow-y: visible;
     display: flex;
-    flex-direction: column;
-    justify-content: center;
+    flex-direction: row;
+    justify-content: space-evenly;
     align-items: center;
+}
+
+.vertical-fb {
+    display: flex;
+    flex-direction: column;
+}
+
+.vertical-fb h2 {
+    margin-bottom: 0px;
+}
+
+.external-link:hover {
+    transform: translateX(5px);
+}
+
+.internal-link:hover {
+    transform: translateX(-5px);
+}
+
+.vertical-fb a:hover~.arrow {
+    opacity: 1;
+}
+
+.vertical-fb a {
+    display: inline-block;
+    transition: transform 0.2s;
+}
+
+.arrow {
+    position: absolute;
+    opacity: 0;
+    width: 30px;
+    transition: opacity 0.25s;
 }
 
 #pfp {
     border-radius: 50%;
-    width: 200px;
+    width: 150px;
     transition: transform .1s ease-in-out;
     margin-bottom: 20px;
-    border-color: #7b5000;
-    border-width: 2px;
-    border-style: outset;
+    /* border-color: #7b5000; */
+    /* border-width: 2px;
+    border-style: outset; */
 }
 
 #pfp:hover {
     transform: rotate(3deg) scale(1.05);
-
 }
 
 #name-text:hover {
     text-decoration: underline;
 }
 
-a {
-    color: inherit;
-    text-decoration: none;
-    transition: text-decoration 0.1s;
-    cursor: pointer;
-}
-
-h1 {
+.vertical-fb h1 {
     font-size: 40pt;
+    padding-top: 20px;
     margin-top: 10px;
     margin-bottom: 10px;
     transition: color, 0.3s;
@@ -121,22 +135,34 @@ h1 {
     display: inline-block;
 }
 
-#picker a {
+h2 {
+    font-size: 25pt;
+    font-weight: 500;
+}
+
+/* #picker a {
     font-family: "Tiempos Headline";
     font-size: 14pt;
     font-weight: 500;
     padding: 10px;
     transition: color, 0.3s;
     text-decoration: underline;
+} */
+
+a {
+    color: inherit;
+    text-decoration: underline;
+    transition: text-decoration 1s;
+    cursor: pointer;
 }
 
-a:hover {
-    text-decoration: underline;
+h2:hover {
+    /* text-decoration: underline; */
 }
 
 #name-box {
     top: 0px;
-    position: sticky;
+    /* position: sticky; */
     transition: background-color 0.15s;
     text-align: center;
 }
@@ -199,12 +225,12 @@ a:hover {
     transition: all 0.25s;
 }
 
-.project-picture:hover {
-    /* border-color: azure;
+/* .project-picture:hover {
+    border-color: azure;
     border-style: inset;
-    border-radius: 5px; */
-    /* transform: scale(1.025); */
-}
+    border-radius: 5px;
+    transform: scale(1.025);
+} */
 
 .project-picture-zoomed {
     /* display: block; */
@@ -223,10 +249,19 @@ a:hover {
 }
 
 
-
-
-
 @media screen and (max-width: 600px) {
+    .vertical-fb {
+        align-items: center;
+    }
+
+    #landing {
+        flex-direction: column;
+    }
+
+    #pfp {
+        width: 200px;
+    }
+
     h1 {
         font-size: 25pt;
     }
